--- a/report.html
+++ b/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,87194],[],[[5,0,0,[],[0,625,37297,6],[]],[7,0,0,[],[0,37922,49256,6],[]]],[],[2,0,2,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,22191],[],[[5,0,0,[],[1,570,21621],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Verify Invalid Credential Suite","*C:\\Users\\yamini\\PycharmProjects\\ROBOT_FRAMEWORK\\login_suite\\verify_invalid_credential_suite.robot","*login_suite/verify_invalid_credential_suite.robot","*<p>This suit file handles all the test case related to the valid credentials\x3c/p>","*TC1","*OpenEMR","*TC2"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Verify Valid Credential Suite","*C:\\Users\\yamini\\PycharmProjects\\ROBOT_FRAMEWORK\\login_suite\\verify_valid_credential_suite.robot","*login_suite/verify_valid_credential_suite.robot","*<p>This suit file handles all the test case related to the valid credentials\x3c/p>","*Verify Valid Credentials Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:27","fail":2,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:01:27","fail":2,"id":"s1","label":"Verify Invalid Credential Suite","name":"Verify Invalid Credential Suite","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"Verify Valid Credential Suite","name":"Verify Valid Credential Suite","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1644641142062;
+window.output["baseMillis"] = 1644642752453;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 87849;
+window.output["generated"] = 22221;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
